--- a/winterminal-settings.json
+++ b/winterminal-settings.json
@@ -56,7 +56,7 @@
                 "hidden": false,
                 "icon": "ms-appx:///ProfileIcons/{9acb9455-ca41-5af7-950f-6bca1bc9722f}.png",
                 "name": "Ubuntu",
-                "startingDirectory": "~"
+                "startingDirectory": "//wsl$/Ubuntu/home/hassan/Projects"
             },
             {
                 "commandline": "%SystemRoot%\\System32\\WindowsPowerShell\\v1.0\\powershell.exe",
